<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/transparent"
    android:orientation="vertical"
    android:padding="16dp"
    tools:context=".OverviewFrag">

    <Button
        android:id="@id/btnBack"
        android:layout_width="73dp"
        android:layout_height="44dp"
        android:background="@drawable/custom_button_2"
        android:text="@string/back"
        tools:layout_editor_absoluteX="322dp"
        tools:layout_editor_absoluteY="16dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="16dp"
        android:fontFamily="@font/racing_sans_one"
        android:text="@string/overview"
        android:textColor="@color/pastel_pink"
        android:textSize="24sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/tvCurrentBalance"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:layout_marginBottom="16dp"
        android:background="@drawable/custom_input"
        android:backgroundTint="@color/medium_slate_blue"
        android:drawablePadding="12dp"
        android:fontFamily="@font/racing_sans_one"
        android:gravity="center"
        android:padding="12dp"
        android:text="@string/your_current_balance_is"
        android:textColor="@color/medium_slate_blue"
        android:textSize="20sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/tvTotalSpent"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:layout_marginBottom="16dp"
        android:background="@drawable/custom_input"
        android:backgroundTint="@color/medium_slate_blue"
        android:drawablePadding="12dp"
        android:fontFamily="@font/racing_sans_one"
        android:gravity="center"
        android:padding="12dp"
        android:text="@string/you_spent"
        android:textColor="@color/medium_slate_blue"
        android:textSize="20sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/tvTotalIncome"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:background="@drawable/custom_input"
        android:backgroundTint="@color/medium_slate_blue"
        android:drawablePadding="12dp"
        android:fontFamily="@font/racing_sans_one"
        android:gravity="center"
        android:padding="12dp"
        android:text="@string/your_income_this_month"
        android:textColor="@color/medium_slate_blue"
        android:textSize="20sp"
        android:textStyle="bold" />


</LinearLayout>