<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/transparent"
    tools:context=".AnalysisFrag">

    <TextView
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:fontFamily="@font/racing_sans_one"
        android:text="@string/analysis"
        android:textAlignment="center"
        android:textColor="@color/pastel_pink"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.549"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.036" />

    <TextView
        android:id="@+id/tvTotalIncome"
        android:layout_width="150dp"
        android:layout_height="75dp"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="8dp"
        android:background="@drawable/custom_input"
        android:backgroundTint="@color/Fandango_50"
        android:fontFamily="@font/racing_sans_one"
        android:text="@string/income"
        android:textAlignment="center"
        android:textColor="@color/pastel_pink"
        app:layout_constraintBottom_toTopOf="@+id/tvTotalExpense"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@+id/textView7"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.937" />

    <TextView
        android:id="@+id/tvTotalExpense"
        android:layout_width="150dp"
        android:layout_height="75dp"
        android:layout_marginStart="10dp"
        android:layout_marginBottom="16dp"
        android:background="@drawable/custom_input"
        android:backgroundTint="@color/Fandango_50"
        android:fontFamily="@font/racing_sans_one"
        android:text="@string/expenses"
        android:textAlignment="center"
        android:textColor="@color/pastel_pink"
        app:layout_constraintBottom_toTopOf="@+id/tvTotalAmount"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.333"
        app:layout_constraintStart_toEndOf="@+id/textView7"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.995" />

    <TextView
        android:id="@+id/tvTotalAmount"
        android:layout_width="150dp"
        android:layout_height="75dp"
        android:layout_marginStart="8dp"
        android:layout_marginBottom="84dp"
        android:background="@drawable/custom_input"
        android:backgroundTint="@color/Fandango_50"
        android:fontFamily="@font/racing_sans_one"
        android:text="@string/total"
        android:textAlignment="center"
        android:textColor="@color/pastel_pink"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.384"
        app:layout_constraintStart_toEndOf="@+id/textView7"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.54" />

    <Button
        android:id="@id/btnBack"
        android:layout_width="73dp"
        android:layout_height="44dp"
        android:background="@drawable/custom_button_2"
        android:text="@string/back"
        tools:layout_editor_absoluteX="322dp"
        tools:layout_editor_absoluteY="16dp" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rvAnalysisTable"
        android:layout_width="409dp"
        android:layout_height="314dp"
        app:layout_constraintBottom_toBottomOf="parent"
        android:background="@drawable/custom_input"
        android:backgroundTint="@color/pastel_pink_50"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="219dp"
        android:layout_height="250dp"
        android:layout_marginStart="8dp"
        android:text="inser graph here"
        android:textColor="@color/white"
        app:layout_constraintStart_toStartOf="parent"
        tools:layout_editor_absoluteY="120dp" />


</androidx.constraintlayout.widget.ConstraintLayout>